--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "manuelh78",
-            "email": "manuelh78@n.fr"
+            "email": "manuelh78dev@ik.me"
         }
     ],
     "require": {
